--- a/style.css
+++ b/style.css
@@ -10,10 +10,19 @@ body {
     background-color: black;
     display: flex;
     flex-direction: column;
+    height: 300px;
+    width: 200px;
 }
 
 .display-container {
     color: white;
+    height: 60px;
+    margin: 10px 10px 10px 10px;
+}
+
+.screen {
+    background-color: lightgrey;
+    color: black;
 }
 
 .button-row {
